--- a/pricing.html
+++ b/pricing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     
-    <title>Simple Pricing Page</title>
+    <title> Pricing Page</title>
     <link rel="stylesheet" href="pricing.css">
 </head>
 <body>
