--- a/pricing.html
+++ b/pricing.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Our Pricing Plans</h1>
+        <h1> Pricing Plans</h1>
         <p> Select a plan according to your needs</p>
     </header>
     <section class="pricing">
@@ -45,5 +45,8 @@
             <button>Sign Up</button>
         </div>
     </section>
+    <footer>
+        <p>&copy,2024 your company,all rights are reserved</p>
+    </footer>
 </body>
 </html>
